--- a/src/components/footer/Footer.styles.scss
+++ b/src/components/footer/Footer.styles.scss
@@ -8,7 +8,8 @@
   padding: 120px 0px 20px 0px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 3840px) {
   .footer {
+    font-size: 1.5vw;
   }
 }
