--- a/src/components/section-title/SectionTitle.styles.scss
+++ b/src/components/section-title/SectionTitle.styles.scss
@@ -13,3 +13,10 @@
     font-size: 8.5vw;
   }
 }
+
+@media (min-width: 1921px) and (max-width: 3840px) {
+  .section-title {
+    padding: 100px 0px 200px 0px;
+    font-size: 3vw;
+  }
+}
