--- a/src/components/skill/Skill.styles.scss
+++ b/src/components/skill/Skill.styles.scss
@@ -83,3 +83,27 @@
     padding: 60px 30px;
   }
 }
+
+@media (max-width: 360px) {
+  .skill {
+    width: 50%;
+    padding: 25px 10px;
+    height: auto;
+    flex-wrap: wrap;
+    .skill-name-wrap {
+      width: 100%;
+      img {
+        width: 40px;
+      }
+      .skill-name {
+        padding-left: 5px;
+        font-size: 4vw;
+      }
+    }
+    .skill-value-wrap {
+      width: 80%;
+      margin-left: 10px;
+      margin-top: 10px;
+    }
+  }
+}
